@@ -15,8 +15,10 @@
  */
 package org.powermock.api.support.membermodification.strategy.impl;
 
+import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 
+import org.powermock.api.support.MethodProxy;
 import org.powermock.api.support.Stubber;
 import org.powermock.api.support.membermodification.strategy.MethodStubStrategy;
 
@@ -33,5 +35,15 @@ public class MethodStubStrategyImpl<T> implements MethodStubStrategy<T> {
 
 	public void andReturn(T returnValue) {
 		Stubber.stubMethod(method, returnValue);
+	}
+
+	public void toThrow(final Throwable throwable) {
+		InvocationHandler throwingInvocationHandler = new InvocationHandler() {
+			
+			public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+				throw throwable;
+			}
+		};
+		MethodProxy.proxy(method, throwingInvocationHandler);
 	}
 }
